--- a/src/pug/partials/sidebar-mitra.pug
+++ b/src/pug/partials/sidebar-mitra.pug
@@ -19,6 +19,8 @@
     +dropdown('Berkas Pemohon', category === 'berkas-pemohon')(id='sidebar-berkas-pemohon-collapse',icon='bx-detail')
       +alink('mitra-master-pemohon')
         span Master Pemohon
+      +alink('mitra-master-legalitas-pemohon')
+        span Master Legalitas Pemohon
       +alink('mitra-master-tanah')
         span Master Tanah
       +alink('mitra-master-proyek')
