--- a/src/pug/user.pug
+++ b/src/pug/user.pug
@@ -208,19 +208,19 @@ block content
                     small Total Proyek
                   .d-flex.flex-column.gap-2
                     .d-flex.gap-4.align-items-center
-                      +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-primary")
+                      span.rounded-pill.p-1.bg-primary.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                       small Provinsi
                       small.fw-semibold.ms-auto 8
                     .d-flex.gap-4.align-items-center
-                      +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-warning")
+                      span.rounded-pill.p-1.bg-warning.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                       small Kota
                       small.fw-semibold.ms-auto 5
                     .d-flex.gap-4.align-items-center
-                      +bx('bxs-circle')(style="font-size:12px;color: var(--bs-yellow);" class="align-middle")
+                      span.rounded-pill.p-1.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2(style="background-color: var(--bs-yellow);")
                       small Kecamatan
                       small.fw-semibold.ms-auto 5
                     .d-flex.gap-4.align-items-center
-                      +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-success")
+                      span.rounded-pill.p-1.bg-success.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                       small Kelurahan
                       small.fw-semibold.ms-auto 15
               .col-md-8
