--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -190,3 +190,5 @@ input[type="checkbox"]:checked
   width: 1.5em
   height: 1em
   background-image: linear-gradient(180deg, #c8102e 0, #c8102e 50%, #FFF 50%, #FFF 100%)
+#editor
+  height: 300px
