--- a/src/pug/admin-order-perizinan.pug
+++ b/src/pug/admin-order-perizinan.pug
@@ -1,6 +1,7 @@
 ---
 title: Admin - Dashboard
 currentUrl: admin-order-perizinan
+header: Order Perizinan
 ---
 extends layouts/layout
 block header
@@ -24,15 +25,15 @@ block content
                         small.text-body-emphasis Total User
                       .d-flex.flex-column.gap-2
                         .d-flex.gap-4.align-items-center
-                          +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-primary")
+                          span.rounded-pill.p-1.bg-primary.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                           small Provinsi
                           small.fw-semibold.ms-auto 8
                         .d-flex.gap-4.align-items-center
-                          +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-warning")
+                          span.rounded-pill.p-1.bg-warning.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                           small Kota
                           small.fw-semibold.ms-auto 5
                         .d-flex.gap-4.align-items-center
-                          +bx('bxs-circle')(style="font-size:12px;color: var(--bs-yellow);" class="align-middle")
+                          span.rounded-pill.p-1.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2(style="background-color: var(--bs-yellow);")
                           small Kecamatan
                           small.fw-semibold.ms-auto 5
                   .col-7
@@ -50,15 +51,15 @@ block content
                         small.text-body-emphasis Total Mitra
                       .d-flex.flex-column.gap-2
                         .d-flex.gap-4.align-items-center
-                          +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-primary")
+                          span.rounded-pill.p-1.bg-primary.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                           small Provinsi
                           small.fw-semibold.ms-auto 8
                         .d-flex.gap-4.align-items-center
-                          +bx('bxs-circle')(style="font-size:12px;" class="align-middle text-warning")
+                          span.rounded-pill.p-1.bg-warning.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2
                           small Kota
                           small.fw-semibold.ms-auto 5
                         .d-flex.gap-4.align-items-center
-                          +bx('bxs-circle')(style="font-size:12px;color: var(--bs-yellow);" class="align-middle")
+                          span.rounded-pill.p-1.d-inline-block.algin-middle.ps-2.pe-1.pt-1.pb-2(style="background-color: var(--bs-yellow);")
                           small Kecamatan
                           small.fw-semibold.ms-auto 5
                   .col-7
