--- a/src/pug/admin-pengguna.pug
+++ b/src/pug/admin-pengguna.pug
@@ -1,6 +1,7 @@
 ---
 title: Admin - Dashboard
-currentUrl: admin-order-perizinan
+currentUrl: admin-pengguna
+header: Pengguna
 ---
 extends layouts/layout
 block header
