--- a/src/pug/layouts/head.pug
+++ b/src/pug/layouts/head.pug
@@ -14,5 +14,11 @@ link(rel='preconnect' href='https://fonts.googleapis.com')
 link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
 link(href='https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap' rel='stylesheet')
 link(href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet')
-
+<!-- Core build with no theme, formatting, non-essential modules -->
+script(src='//cdn.quilljs.com/1.3.6/quill.core.js')
+link(href='//cdn.quilljs.com/1.3.6/quill.core.css' rel='stylesheet')
+<!-- Main Quill library -->
+script(src='//cdn.quilljs.com/1.3.6/quill.min.js')
+<!-- Theme included stylesheets -->
+link(href='//cdn.quilljs.com/1.3.6/quill.snow.css' rel='stylesheet')
 link(rel="stylesheet" media="all" href="/css/app.min.css")
