--- a/src/pug/mitra-master-proyek-pemohon.pug
+++ b/src/pug/mitra-master-proyek-pemohon.pug
@@ -1,7 +1,6 @@
 ---
-title: User - Dashboard
-currentUrl: user-tambah-proyek
-header: Tambah Data Proyek
+title: Mitra - Dashboard
+header: Info Proyek Pemohon
 ---
 extends layouts/layout
 block header
@@ -10,52 +9,84 @@ block content
   .pb-5.mb-6
     .container.py-5.mb-5
       .d-flex.flex-column.gap-4
+        .rounded.px-2.py-3.gap-2.bg-primary-subtle.text-primary.subtitle.me-auto.d-flex.align-items-center
+          .d-flex.align-items-center
+            +bx('bx-info-circle')
+          span Mitra hanya dapat melihat dan unduh data pemohon
         .p-4.bg-light.rounded.border
-          .d-flex.justify-content-between.align-items-center.collapsed(data-bs-toggle="collapse" href="#pls-data-proyek" role="button" aria-expanded="false" aria-controls="perizinan-terlambat")
+          .d-flex.justify-content-between.align-items-center(data-bs-toggle="collapse" href="#pls-data-proyek" role="button" aria-expanded="true" aria-controls="perizinan-terlambat")
             p.mb-0.subtitle.me-auto Data Proyek
             .rounded-circle.border.p-2.d-flex
               +bx('collapsed-icon')
-          #pls-data-proyek.collapse.mt-4
+          #pls-data-proyek.collapse.mt-4.fade.show
             .row.gy-4
               .col-md-6
                 div
                   label.form-label(for='') Nama Pemohon
-                  select.select.wide(name="pemohon")
+                  select.form-control(disabled value="pt" name="pemohon")
                     option(value="pt") PT HK Realtindo
-                    option(value="hk") HK Realtindo PT
-                    option(value="real") Realtindo PT HK
               .col-md-6
                 div
                   label.form-label(for='') Tanah/Lokasi
-                  select.select.wide(name="tanah")
-                    option(value="pt") PT HK Realtindo
-                    option(value="hk") HK Realtindo PT
-                    option(value="real") Realtindo PT HK
+                  select.form-control(disabled value="" name="tanah")
+                    option(value="") Apartment Green Lake City
               .col-md-12
                 div
                   label.form-label(for='nama-proyek') Nama Proyek
-                  input#nama-proyek.form-control(type='text' name='nama-proyek' placeholder='Nama Proyek')
+                  input#nama-proyek.form-control(type='text' disabled value="Pembangunan Apartment Green Lake City" name='nama-proyek' placeholder='Nama Proyek')
               .col-md-6
                 div
                   label.form-label(for='jumlah-basement') Jumlah Basement
-                  input#jumlah-basement.form-control(type='text' name='jumlah-basement' placeholder='Jumlah Basement')
+                  input#jumlah-basement.form-control(type='text' disabled value="5 Basement" name='jumlah-basement' placeholder='Jumlah Basement')
               .col-md-6
                 div
                   label.form-label(for='jumlah-lantai') Jumlah Lantai
-                  input#jumlah-lantai.form-control(type='text' name='jumlah-lantai' placeholder='Jumlah Lantai')
+                  input#jumlah-lantai.form-control(type='text' disabled value="45 Lantai" name='jumlah-lantai' placeholder='Jumlah Lantai')
               .col-md-12
-                .d-flex.justify-content-center
-                  .col-md-6
+                .p-4.border.rounded
+                  .d-flex.justify-content-between.align-items-center
+                    .subtitle.fw-semibold Foto Proyek
                     div
-                      label.form-label(for='foto-proyek') Foto Proyek
-                      +file_upload('foto-proyek')
+                      button.btn.btn-outline-primary(type="button")
+                        +bx('bx-download')
+                        span Unduh
+                  .row.justify-content-center
+                    .col-md-5
+                      .p-3
+                        .slider.slider-for
+                          div
+                            img.w-100.h-auto(src="/img/content/carousel.png", alt="carousel")
+                          div
+                            img.w-100.h-auto(src="/img/content/news-thumb.png", alt="carousel")
+                          div
+                            img.w-100.h-auto(src="/img/content/carousel.png", alt="carousel")
+                          div
+                            img.w-100.h-auto(src="/img/content/news-thumb.png", alt="carousel")
+                          div
+                            img.w-100.h-auto(src="/img/content/carousel.png", alt="carousel")
+                      .slider.slider-nav
+                        div
+                          .rounded.border.bg-dark.text-white.m-2.overflow-hidden
+                            img.w-100.h-auto(src="/img/content/carousel.png", alt="carousel")
+                        div
+                          .rounded.border.bg-dark.text-white.m-2.overflow-hidden
+                            img.w-100.h-auto(src="/img/content/news-thumb.png", alt="carousel")
+                        div
+                          .rounded.border.bg-dark.text-white.m-2.overflow-hidden
+                            img.w-100.h-auto(src="/img/content/carousel.png", alt="carousel")
+                        div
+                          .rounded.border.bg-dark.text-white.m-2.overflow-hidden
+                            img.w-100.h-auto(src="/img/content/news-thumb.png", alt="carousel")
+                        div
+                          .rounded.border.bg-dark.text-white.m-2.overflow-hidden
+                            img.w-100.h-auto(src="/img/content/carousel.png", alt="carousel")
 
         .p-4.bg-light.rounded.border
           .d-flex.justify-content-between.align-items-center.collapsed(data-bs-toggle="collapse" href="#pls-data-konsultan" role="button" aria-expanded="false" aria-controls="perizinan-terlambat")
             p.mb-0.subtitle.me-auto Data Konsultan
             .rounded-circle.border.p-2.d-flex
               +bx('collapsed-icon')
-          #pls-data-konsultan.collapse.mt-4
+          #pls-data-konsultan.collapse.mt-4.fade
             .row.row-cols-4.gy-4
               each val, key in {'arsitek':'Arsitek','struktur':'Struktur','mep':'MEP','pm':'Project Management','lingkungan':'Lingkungan','lalin':'Lalu-lintas','infra':'Insfrastruktur','lans':'Lanscape','fasade':'Fasade'}
                 .col
@@ -79,7 +110,7 @@ block content
             p.mb-0.subtitle.me-auto Data Intensitas Lahan
             .rounded-circle.border.p-2.d-flex
               +bx('collapsed-icon')
-          #pls-data-intensitas.collapse.mt-4
+          #pls-data-intensitas.collapse.mt-4.fade
             .row.row-cols-3.gy-4
               each val, key in ['Luas Lahan Gross','Terpotong Rencana Kota','Luas Lahan Nett']
                 .col
@@ -94,7 +125,7 @@ block content
             p.mb-0.subtitle.me-auto Batas Perencanaan
             .rounded-circle.border.p-2.d-flex
               +bx('collapsed-icon')
-          #pls-data-batas.collapse.mt-4
+          #pls-data-batas.collapse.mt-4.fade
             .border.rounded.pt-2
               table.table.mb-0
                 thead.subtitle.table-light.align-middle
@@ -125,14 +156,12 @@ block content
             p.mb-0.subtitle.me-auto Lokasi Tempat Pengurusan Perizinan
             .rounded-circle.border.p-2.d-flex
               +bx('collapsed-icon')
-          #pls-data-lokasi.collapse.mt-4
+          #pls-data-lokasi.collapse.mt-4.fade
             .row
               .col-md-4
                 div
                   label.form-label(for="lokasi") Lokasi Pengurusan Izin
-                  select.select.wide(name="")
+                  select.form-control.wide(name="")
                     option(value="") Kota Bandung
 block modal
   +footer_back
-    button.btn.btn-light.px-8(type="button") Cancel
-    button.btn.btn-primary.ms-4.px-8(type="button") Save
